# ubuntrafine

./: .gitignore  CMakeLists.txt  README.md  Ubuntrafine.service  bar.js  bar2.js  listen_keys.cpp  main_backup.cpp
KeyListener/: listen_keys.cpp
trayapps/appindicator/: ubuntrafinetray.desktop
ubuntrafine@hanvv3.github.com/: extension.js  extension.js.backup  metadata.json  stylesheet.css
ufctl/: CLIHandler.cpp  CLIHandler.h  CMakeLists.txt  Globals.h  ListenKeys.cpp  UltrafineDisplay.cpp  UltrafineDisplay.h  main.cpp
